[package]
name = "hundun"
version = "0.1.0"
edition = "2021"
authors = ["Jamin Lai <jamin@elacraft.com>"]
license = "AGPL-3.0"
repository = "https://github.com/cloudflare/pingora"
categories = ["web-programming"]
keywords = ["http", "pingora"]
description = """
hundun is a high-performance, scalable, and reliable AI gateway for AI services and models.
"""

[dependencies]
async-trait = "0.1.85"
bytes = "1.9.0"
env_logger = "0.11.6"
log.workspace = true
pingora = { version = "0.4.0", features = ["openssl"] }
pingora-core = "0.4.0"
pingora-http = "0.4.0"
pingora-proxy = "0.4.0"
url = "2.5.4"

[features]
default = []
